--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	
 	<body>
-		<img src="image/authorImage.jpg" alt="Student Image" width="250" height="250"/> 
+		<img src="image/AuthorImage.jpg" alt="Student Image" width="250" height="250"/> 
 		<h1>Jasser Dhaouadi</h1>
 		<ul>
 		  <!--An unordered list with an item for each days assignment -->
