--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 		  <li><a href="">Lab 05 - </a></li>
 		</ul>
 		
+		<p> <a href="http://validator.w3.org/check/referer">
+			<img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
+			</a>
+		</p>
 
 	</body>
 </html>
-
-<a href="http://validator.w3.org/check/referer"> 
-			<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/> </a>
