--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  <li><a href="">Lab 05 - </a></li>
 		</ul>
 		
-		<p> <a href="https://validator.w3.org/check?uri=referer">
+		<p> <a href="http://validator.w3.org/check?uri=referer">
 			<img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
 			</a>
 		</p>
