--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="description" content="First Homework"/>
+		<meta name="description" content="Lab 01"/>
 		<meta name="author" content="Jasser Dhaouadi"/>
 		<title>Homepage</title>
 		<link href="image/icon.jpg" type="image/jpg" rel="shortcut icon"/>
