--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<ul>
 		  <!--An unordered list with an item for each days assignment -->
 		  <li><a href="index.html">Lab 01 - Home Page</a></li>
-		  <li><a href="">Lab 02 - About Me</a></li>
+		  <li><a href="aboutme.html">Lab 02 - About Me</a></li>
 		  <li><a href="">Lab 02 - Recipe</a></li>
 		  <li><a href="">Lab 03 - </a></li>
 		  <li><a href="">Lab 04 - </a></li>
