--- a/aboutme.html
+++ b/aboutme.html
@@ -11,9 +11,10 @@
 	<body>
 		<h1>About Jasser Dhaouadi</h1>
 		<p>
-			My name is Jasser Dhaouadi, a Tunisian engineer with big dreams. I am persistent, motivated and methodical. 
-		
+			My name is Jasser Dhaouadi, a <strong>Tunisian</strong> engineer with <strong>big dreams</strong>. 
+			I am <strong>persistent</strong>, <strong>motivated</strong> and <strong>methodical</strong>. 
 		</p>
+		<hr/>
 
 		
 		<p> <a href="https://validator.w3.org/check/referer">
