--- a/aboutme.html
+++ b/aboutme.html
@@ -6,20 +6,81 @@
 		<meta name="author" content="Jasser Dhaouadi"/>
 		<title>About Me</title>
 		<link href="image/icon.jpg" type="image/jpg" rel="shortcut icon"/>
+		<link href="styleme.css" type="text/css" rel="stylesheet"/>
 	</head>
 	
 	<body>
 		<h1>About Jasser Dhaouadi</h1>
-		<p>
-			My name is Jasser Dhaouadi, a <strong>Tunisian</strong> engineer with <strong>big dreams</strong>. 
+		<h2>Introduction</h2>
+		<p id="intro">
+			My name is Jasser Dhaouadi, a <strong>Tunisian</strong> engineer with <strong>big dreams</strong>. <br/>
 			I am <strong>persistent</strong>, <strong>motivated</strong> and <strong>methodical</strong>. 
 		</p>
 		<hr/>
+		
+		<h2>My Classes at MIU</h2>
+		<p>
+			<ul>
+			  <!--An unordered list of my courses at MIU-->
+			  <li>CS582 - Machine Learning</li>
+			  <li>CS488 - Big Data Analytics</li>
+			  <li>CS522	- Big Data</li>
+			  <li>CS523 - Big Data Technology</li> 
+			  <li>CS435	- Algorithms</li>
+			  <li>CS590	- Software Architecture</li>
+			  <li>CS472 - Web Application Programming</li> 
+			  <li>CS422	- Database Management Systems</li>
+			  <li>CS401 - Modern Programming</li>
+			</ul> 
+		</p>
+		
+		<h2>My Favorite Movies </h2>
+		<p>
+			<ol reversed>
+			  <!--An ordered list of my favorite movies-->
+			  <li>I, Robot (<a href="https://www.imdb.com/title/tt0343818/?ref_=nv_sr_srsg_0">IMDB</a>)</li>
+			  <li>Gladiator (<a href="https://www.imdb.com/title/tt0172495/?ref_=nv_sr_srsg_0">IMDB</a>)</li>
+			  <li>
+					The Pursuit of Happiness (<a href="https://www.imdb.com/title/tt0454921/">IMDB</a>)
+					<dl>
+						<dt>Director</dt>
+						<dd>Gabriele Muccino</dd>
+						<dt>Genre</dt>
+						<dd>Biography, Drama </dd>
+						<dt>Stars</dt>
+						<dd>Will Smith, Thandie Newton, Jaden Smith</dd>
+						<dt>Plot Outline</dt>
+						<dd>A struggling salesman takes custody of his son as he's poised to begin a life-changing professional career.</dd>
+					</dl>			  
+			  </li>			  
+			</ol> 
+		</p>
+		
+		
+		<h2>My Crazy Moods </h2>
+		<p id="mood">
+			When I am happy : <img src="image/happy.jpg" alt="happy" width="200" height="150"/> 
+			When I am sad : <img src="image/sad.jpg" alt="sad" width="150" height="150"/> 
+		</p>
+		
+		
+		<h2>What about my neighbors ! </h2>
+		<p>
+			<ul>
+			  <li>Kat James : She has a <em>nice voice</em> and she loves <em>singing</em> in public <br/></li>
+			  <li>Scott Ragle : He is a big fan of <em>NBA </em></li>
+			</ul>
+		</p>
 
 		
 		<p> <a href="https://validator.w3.org/check/referer">
 			<img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
 			</a>
+			
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<img src=http://mumstudents.org/cs472/2013-09/images/w3c-css.png alt="Validate" />
+			</a>
+			
 		</p>
 
 	</body>
