--- a/pie.html
+++ b/pie.html
@@ -19,11 +19,11 @@
 
 		<img src="http://mumstudents.org/cs472/2014-09/Homework/1/pie.jpg" alt="lemon meringue pie" /> 
 
-		</br></br>
-		One 9-inch pie</br>
-		30 Min - Prep time</br>
-		10 Min - Cook time</br>
-		40 Min - Total</br>
+		<br><br>
+		One 9-inch pie<br>
+		30 Min - Prep time<br>
+		10 Min - Cook time<br>
+		40 Min - Total<br>
 		8 Servings
 
 		<h2>INGREDIENTS</h2>
