--- a/pie.html
+++ b/pie.html
@@ -75,7 +75,7 @@
 		<p class= "quote">
 			<q>
 			This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
-				</br></br>
+				<br><br>
 			- Emilie S.
 			</q>
 		</p>
@@ -83,7 +83,7 @@
 			<q>
 			Q: What do you call an ape who loves pie?
 			A: A meringue-utan.
-			    </br></br>
+			    <br><br>
 			- Vickie K.
 			</q>
 		</p>
@@ -91,7 +91,7 @@
 		<p class= "quote">	
 			<q>
 			This site can really <strong>engage</strong> my interest. Follow the recipe above and <strong>make it so!</strong> This pie is <strong>number one.</strong>
-			    </br></br>
+			    <br><br>
 			- Jean-Luc Piecard
 			</q>
 		</p>	
@@ -99,7 +99,7 @@
 
 		<h2>LINKS</h2>
 		
-		<a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a> </br>
+		<a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a> <br>
 		<a href="index.html">Home</a>
 	
 		
