--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		  <!--An unordered list with an item for each days assignment -->
 		  <li><a href="index.html">Lab 01 - Home Page</a></li>
 		  <li><a href="aboutme.html">Lab 02 - About Me</a></li>
-		  <li><a href="pie.html">Lab 02 - Recipe</a></li>
-		  <li><a href="">Lab 03 - </a></li>
+		  <li><a href="hw1/pie.html">Lab 02 - Recipe</a></li>
+		  <li><a href="hw2/tmnt.html">Lab 03 - Movie Review</a></li>
 		  <li><a href="">Lab 04 - </a></li>
 		  <li><a href="">Lab 05 - </a></li>
 		</ul>
