--- a/hw2/tmnt.html
+++ b/hw2/tmnt.html
@@ -8,13 +8,13 @@
 		<meta name="description" content="Lab 03"/>
 		<meta name="author" content="Jasser Dhaouadi"/>
 		<title>TMNT - Rancid Tomatoes</title>
-		<link href="Movie Review_files/rotten.gif" type="image/gif" rel="shortcut icon"/>
+		<link href="Movie_Review_files/rotten.gif" type="image/gif" rel="shortcut icon"/>
 		<link href="movie.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<div id="imageBanner">
-			<img  src="Movie Review_files/banner.png" alt="Rancid Tomatoes">
+			<img  src="Movie_Review_files/banner.png" alt="Rancid Tomatoes">
 		</div>
 		
 		<div id="behindBanner">
@@ -27,7 +27,7 @@
 		
 			<div id= "subAreaRight">
 				<div>
-					<img src="./Movie Review_files/overview.png" alt="general overview">
+					<img src="Movie_Review_files/overview.png" alt="general overview">
 				</div>
 
 				<dl>
@@ -78,18 +78,18 @@
 			<div id= "subAreaLeft">
 			
 				<div id = "topLeftDivision">
-					<img  src="./Movie Review_files/rottenbig.png" alt="Rotten">
+					<img  src="Movie_Review_files/rottenbig.png" alt="Rotten">
 					33%
 				</div>
 				
 				<div id = "col1">
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Peter Debruge <br>
 							<em>Variety</em>
 						</p>
@@ -97,11 +97,11 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/fresh.gif" alt="Fresh">
+							<img src="Movie_Review_files/fresh.gif" alt="Fresh">
 							<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Todd Gilchrist <br>
 							<em>IGN Movies</em>
 						</p>
@@ -109,22 +109,22 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>It stinks!</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Jay Sherman (unemployed)
 						</p>
 					</div>
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Joshua Tyler <br>
 							<em>CinemaBlend.com</em>
 						</p>
@@ -132,11 +132,11 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>The movie is so wonderful !!</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Jasser Dhaouadi <br>
 							<em>Maharishi Interational University</em>
 						</p>
@@ -146,11 +146,11 @@
 				<div id = "col2">
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>The turtles themselves may <br>look prettier, but are no <br>smarter; torn irreparably from their <br>countercultural roots, our <br>superheroes on the half shell have been firmly co-opted by the <br>industry their creators once sought to spoof.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Jeannette Catsoulis <br>
 							<em>New York Times</em>
 						</p>
@@ -158,11 +158,11 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Ed Gonzalez <br>
 							<em>Slant Magazine</em>
 						</p>
@@ -170,11 +170,11 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/fresh.gif" alt="Fresh">
+							<img src="Movie_Review_files/fresh.gif" alt="Fresh">
 							<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Mark Palermo <br>
 							<em>Coast (Halifax, Nova Scotia)</em>
 						</p>
@@ -182,11 +182,11 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Steve Rhodes <br>
 							<em>Internet Reviews</em>
 						</p>
@@ -194,11 +194,11 @@
 
 					<div class = "review">
 						<p>
-							<img src="./Movie Review_files/rotten.gif" alt="Rotten">
+							<img src="Movie_Review_files/rotten.gif" alt="Rotten">
 							<q>I like the movie so much !!</q>
 						</p>
 						<p>
-							<img src="./Movie Review_files/critic.gif" alt="Critic">
+							<img src="Movie_Review_files/critic.gif" alt="Critic">
 							Jasser Dhaouadi <br>
 							<em>MIU</em>
 						</p>
@@ -215,8 +215,8 @@
 
 		</div>
 		<div id="validation">
-			<a href="https://validator.w3.org/check/referer"><img src="./Movie Review_files/w3c-html.png" alt="Valid HTML5"></a> <br>
-			<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="./Movie Review_files/w3c-css.png" alt="Valid CSS"></a>
+			<a href="https://validator.w3.org/check/referer"><img src="Movie_Review_files/w3c-html.png" alt="Valid HTML5"></a> <br>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="Movie_Review_files/w3c-css.png" alt="Valid CSS"></a>
 		</div>
 	
 
