--- a/hw1/pie.html
+++ b/hw1/pie.html
@@ -1,3 +1,5 @@
+<!--Student: Jasser Dhaouadi Student ID: 610099-->
+<!--Task: Pie web page-->
 <!--Implemented extra features: 1-Background AND 2- Favicon-->
 
 <!DOCTYPE html>
