--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 		  <li><a href="aboutme.html">Lab 02 - About Me</a></li>
 		  <li><a href="hw1/pie.html">Lab 02 - Recipe</a></li>
 		  <li><a href="hw2/tmnt.html">Lab 03 - Movie Review</a></li>
-		  <li><a href="">Lab 04 - </a></li>
+		  <li><a href="ResponsiveDesignExercise/sol1_float.html">Lab 04 - Responsive Design: Float Solution </a></li>
+		  <li><a href="ResponsiveDesignExercise/sol2_flexbox.html">Lab 04 - Responsive Design: Flexbox Solution </a></li>
+		  <li><a href="ResponsiveDesignExercise/sol3_grid.html">Lab 04 - Responsive Design: Grid Solution </a></li>
 		  <li><a href="">Lab 05 - </a></li>
+		  <li><a href="">Lab 06 - </a></li>
+		  <li><a href="">Lab 07 - </a></li>
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
