--- a/ResponsiveDesignExercise/sol1_float.html
+++ b/ResponsiveDesignExercise/sol1_float.html
@@ -35,12 +35,19 @@
 			Column2
 		</div>
 		
-		
-		
-		
-		
+			
 				
 		<h3> Footer </h3>
+		
+		<p> <a href="https://validator.w3.org/check/referer">
+			<img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
+			</a>
+			
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<img src=http://mumstudents.org/cs472/2013-09/images/w3c-css.png alt="Validate" />
+			</a>
+			
+		</p>
 		
 
 	</body>
