--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		  <li><a href="ResponsiveDesignExercise/sol1_float.html">Lab 04 - Responsive Design: Float Solution </a></li>
 		  <li><a href="ResponsiveDesignExercise/sol2_flexbox.html">Lab 04 - Responsive Design: Flexbox Solution </a></li>
 		  <li><a href="ResponsiveDesignExercise/sol3_grid.html">Lab 04 - Responsive Design: Grid Solution </a></li>
-		  <li><a href="">Lab 05 - </a></li>
+		  <li><a href="JavaScriptBasics/jsbasics.html">Lab 05 - JavaScript Basics </a></li>
 		  <li><a href="">Lab 06 - </a></li>
 		  <li><a href="">Lab 07 - </a></li>
 		</ul>
