--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 		  <li><a href="ResponsiveDesignExercise/sol2_flexbox.html">Lab 04 - Responsive Design: Flexbox Solution </a></li>
 		  <li><a href="ResponsiveDesignExercise/sol3_grid.html">Lab 04 - Responsive Design: Grid Solution </a></li>
 		  <li><a href="JavaScriptBasics/jsbasics.html">Lab 05 - JavaScript Basics </a></li>
-		  <li><a href="">Lab 06 - </a></li>
+		  <li><a href="lab6/JSObjects.html">Lab 06 - JavaScript Objects, Inheritance, closure and Scope </a></li>
 		  <li><a href="">Lab 07 - </a></li>
+		  <li><a href="">Lab 08 - </a></li>
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
