--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 		  <li><a href="ResponsiveDesignExercise/sol3_grid.html">Lab 04 - Responsive Design: Grid Solution </a></li>
 		  <li><a href="JavaScriptBasics/jsbasics.html">Lab 05 - JavaScript Basics </a></li>
 		  <li><a href="lab6/JSObjects.html">Lab 06 - JavaScript Objects, Inheritance, closure and Scope </a></li>
-		  <li><a href="">Lab 07 - </a></li>
+		  <li><a href="ASCII_ANIMATION/ascii.html">Lab 07 - ASCII ANIMATION </a></li>
+		  <li><a href="hw7/JSmap_reduce_filter.html">Lab 07 - map,reduce,filter (html version) </a></li>
+		  <li><a href="hw7/JSmap_reduce_filter.js">Lab 07 - map,reduce,filter (JS version) </a></li>
 		  <li><a href="">Lab 08 - </a></li>
+		  <li><a href="">Lab 09 - </a></li>
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
