--- a/ASCII_ANIMATION/ascii.html
+++ b/ASCII_ANIMATION/ascii.html
@@ -8,6 +8,7 @@
 		<title>ASCIImation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="ascii.css" type="text/css" rel="stylesheet">
+		<link href="../image/icon.jpg" type="image/jpg" rel="shortcut icon"/>
 		<script src="animations.js" type="text/javascript"></script>
 		<script src="ascii.js" type="text/javascript"></script>
     </head>
