--- a/ASCII_ANIMATION/ascii.html
+++ b/ASCII_ANIMATION/ascii.html
@@ -2,7 +2,7 @@
 <!--Assignment: Lesson 7: (Objects, Modules, Inheritance) ASCII Animation -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>ASCIImation</title>
