--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 		  <li><a href="ASCII_ANIMATION/ascii.html">Lab 07 - ASCII ANIMATION </a></li>
 		  <li><a href="hw7/JSmap_reduce_filter.html">Lab 07 - map,reduce,filter (html version) </a></li>
 		  <li><a href="hw7/JSmap_reduce_filter.js">Lab 07 - map,reduce,filter (JS version) </a></li>
-		  <li><a href="">Lab 08 - </a></li>
+		  <li><a href="hw8/maze.html">Lab 08 - Maze </a></li>
 		  <li><a href="">Lab 09 - </a></li>
+		  <li><a href="">Lab 10 - </a></li>
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
