--- a/hw8/maze.html
+++ b/hw8/maze.html
@@ -11,7 +11,11 @@
 		<link href="../image/icon.jpg" type="image/jpg" rel="shortcut icon"/>
 		
 		<!-- provided files; do not modify -->
+		<!-- 
+		this has problem of HTTPS security 
 		<link href="https://www.cs.washington.edu/education/courses/190m/12sp/labs/7/maze.css" type="text/css" rel="stylesheet" />
+		-->
+		<link href="maze.css" type="text/css" rel="stylesheet" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		
 		<!-- your code -->
