--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 		  <li><a href="hw7/JSmap_reduce_filter.html">Lab 07 - map,reduce,filter (html version) </a></li>
 		  <li><a href="hw7/JSmap_reduce_filter.js">Lab 07 - map,reduce,filter (JS version) </a></li>
 		  <li><a href="hw8/maze.html">Lab 08 - Maze </a></li>
-		  <li><a href="">Lab 09 - </a></li>
+		  <li><a href="tasksHTML/tasks.html">Lab 09 - tasks.html</a></li>
 		  <li><a href="">Lab 10 - </a></li>
+		  <li><a href="">Lab 11 - </a></li>
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
