--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 		  <li><a href="hw7/JSmap_reduce_filter.js">Lab 07 - map,reduce,filter (JS version) </a></li>
 		  <li><a href="hw8/maze.html">Lab 08 - Maze </a></li>
 		  <li><a href="tasksHTML/task.html">Lab 09 - tasks.html</a></li>
-		  <li><a href="">Lab 10 - </a></li>
+		  <li><a href="cleanScreenLab/cleanScreenLab.html">Lab 10 - Clean Screen Lab</a></li>
 		  <li><a href="">Lab 11 - </a></li>
+		  <li><a href="">Lab 12 - </a></li>
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
