--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		  <li><a href="hw8/maze.html">Lab 08 - Maze </a></li>
 		  <li><a href="tasksHTML/task.html">Lab 09 - tasks.html</a></li>
 		  <li><a href="cleanScreenLab/cleanScreenLab.html">Lab 10 - Clean Screen Lab</a></li>
-		  <li><a href="">Lab 11 - </a></li>
-		  <li><a href="">Lab 12 - </a></li>
+		  <li><a href="SPA/SPA.html">Final Lab - AJAX and JSON </a></li>
+
 		</ul>
 		
 		<p> <a href="https://validator.w3.org/check/referer">
